--- a/package.json
+++ b/package.json
@@ -26,8 +26,10 @@
   },
   "devDependencies": {
     "@types/chrome": "^0.0.263",
+    "sass": "^1.72.0",
+    "sass-loader": "^14.1.1",
     "ts-loader": "^9.4.2",
-    "webpack": "^5.75.0",
+    "webpack": "^5.91.0",
     "webpack-cli": "^5.0.1"
   }
 }
